Added health endpoint